fix:PI-37781 firefox scrollbar overflow 兼容问题

--- a/src/less/mixins.less
+++ b/src/less/mixins.less
@@ -26,6 +26,7 @@
 
 .scrollbar(@x: hidden, @y: overlay) {
   overflow: hidden;
+  overflow: -moz-hidden-unscrollable;
   scrollbar-width: thin;
   scrollbar-color: rgba(173, 178, 194, 0.6) rgba(255, 255, 255, 0);
 
